src/objects/crms11__Add_on__c.object
<CustomObject>
    <description>FlexPricer Add-on Products are automatically added as line items when their &apos;master&apos; product is added.</description>
    <fields>
        <fullName>crms11__Add_on_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product which is an add-on for master product</description>
        <inlineHelpText>Product which is an add-on for master product</inlineHelpText>
        <label>Add-on Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Included as an Add-on to</relationshipLabel>
        <relationshipName>Add_ons1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Default_Quantity__c</fullName>
        <description>The default quantity of add-on products to be added when master product is added.</description>
        <inlineHelpText>The default quantity of add-on products to be added when master product is added.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Master_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product record look-up, for which this product will be treated as add-on.</description>
        <inlineHelpText>Product record look-up, for which this product will be treated as add-on.</inlineHelpText>
        <label>Master Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Master Add-on</relationshipLabel>
        <relationshipName>Add_ons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Multiple_of_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, add-on product will be added to cart in multiple of master product.</description>
        <inlineHelpText>If checked, add-on product will be added to cart in multiple of master product.</inlineHelpText>
        <label>Multiple of Master</label>
        <type>Checkbox</type>
    </fields>
    <label>Add-on</label>
    <listViews>
        <fullName>crms11__All_Add_ons</fullName>
        <columns>NAME</columns>
        <columns>crms11__Master_Product__c</columns>
        <columns>crms11__Add_on_Product__c</columns>
        <columns>crms11__Default_Quantity__c</columns>
        <columns>crms11__Multiple_of_Master__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Add-ons</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Add-on Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Add-ons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>crms11__Addon_product_cannot_be_same_as_Master</fullName>
        <active>true</active>
        <description>Any add-on product, cannot be same as master product in a same record.</description>
        <errorConditionFormula>crms11__Add_on_Product__c ==  crms11__Master_Product__c</errorConditionFormula>
        <errorMessage>Add-on product and Master product cannot be same</errorMessage>
    </validationRules>
</CustomObject>